UI: Added version marker in footer and ensured version variable passing

--- a/templates/index.html
+++ b/templates/index.html
@@ -175,6 +175,10 @@
                 </div>
             </div>
         </div>
+
+        <footer style="text-align: center; color: #64748b; font-size: 0.7rem; margin-top: 3rem; padding-bottom: 2rem; border-top: 1px solid var(--border); padding-top: 1rem;">
+            Trading Analyzer Pro - Version {{ version|default('3.5.0') }} | Statut: {{ engine_status }} | Maj: {{ last_update }}
+        </footer>
     </div>
 
     <script>
